--- a/post/onenote/index.gmi
+++ b/post/onenote/index.gmi
@@ -47,9 +47,9 @@ Woopsie.
 
 ## Related articles
 
+=> /post/all-music-sucks/index.gmi All Music Sucks: <no value>
 => /post/gemini-theme/index.gmi New Theme and Gemini!: <no value>
 => /post/termux/index.gmi Termux and Android: <no value>
-=> /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene: <no value>
 ---
 
 => / Back to the Index
