--- a/post/scholarships/index.gmi
+++ b/post/scholarships/index.gmi
@@ -37,9 +37,9 @@ Oh, and they're not just for first year of the degree, but for each year.
 
 ## Related articles
 
+=> /post/all-music-sucks/index.gmi All Music Sucks: <no value>
 => /post/washroom-stalls/index.gmi Washroom Stalls in North America Suck: <no value>
 => /post/wide-shoes/index.gmi Wide Shoes: <no value>
-=> /post/escalators/index.gmi Escalators: <no value>
 ---
 
 => / Back to the Index
