--- a/post/washroom-stalls/index.gmi
+++ b/post/washroom-stalls/index.gmi
@@ -24,9 +24,9 @@ It's a wonderful experience, doing what you are there to do without constantly w
 
 ## Related articles
 
+=> /post/all-music-sucks/index.gmi All Music Sucks: <no value>
 => /post/wide-shoes/index.gmi Wide Shoes: <no value>
 => /post/escalators/index.gmi Escalators: <no value>
-=> /post/ddg-google/index.gmi Duck Duck Go > Google: <no value>
 ---
 
 => / Back to the Index
