--- a/post/bears/index.gmi
+++ b/post/bears/index.gmi
@@ -22,9 +22,9 @@ Bears! (1.6MB) [2]
 
 ## Related articles
 
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
 => /post/murphy/index.gmi Beating Murphy: <no value>
-=> /post/equal-rites/index.gmi Review: Equal Rites (Discworld): <no value>
 ---
 
 => / Back to the Index
