--- a/post/chicken-pot-pie/index.gmi
+++ b/post/chicken-pot-pie/index.gmi
@@ -125,9 +125,9 @@ He smiled as that violent wall of force and heat rose to meet him.
 
 ## Related articles
 
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
 => /post/murphy/index.gmi Beating Murphy: <no value>
-=> /post/bears/index.gmi Bears! An Incomplete Mini D&D Adventure: <no value>
 ---
 
 => / Back to the Index
