--- a/post/broken-clock/index.gmi
+++ b/post/broken-clock/index.gmi
@@ -24,9 +24,9 @@ Join me next time when I "prove" that the egg does come before the chicken.
 
 ## Related articles
 
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/murphy/index.gmi Beating Murphy: <no value>
 => /post/bears/index.gmi Bears! An Incomplete Mini D&D Adventure: <no value>
-=> /post/equal-rites/index.gmi Review: Equal Rites (Discworld): <no value>
 ---
 
 => / Back to the Index
