--- a/post/checkout-lane/index.gmi
+++ b/post/checkout-lane/index.gmi
@@ -54,9 +54,9 @@ Either way, I'm excited to be back in a country that does grocery shopping prope
 
 ## Related articles
 
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
 => /post/murphy/index.gmi Beating Murphy: <no value>
-=> /post/bears/index.gmi Bears! An Incomplete Mini D&D Adventure: <no value>
 ---
 
 => / Back to the Index
