--- a/post/gab/index.gmi
+++ b/post/gab/index.gmi
@@ -240,9 +240,9 @@ Comparing Gab more thoroughly to other social media platforms is a topic for ano
 
 ## Related articles
 
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
 => /post/murphy/index.gmi Beating Murphy: <no value>
-=> /post/bears/index.gmi Bears! An Incomplete Mini D&D Adventure: <no value>
 ---
 
 => / Back to the Index
