--- a/post/hedonic-treadmill/index.gmi
+++ b/post/hedonic-treadmill/index.gmi
@@ -98,9 +98,9 @@ The **Nihilistic Perfectly-Tuned Mass-Spring-Damper of Happiness** is the observ
 
 ## Related articles
 
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
 => /post/murphy/index.gmi Beating Murphy: <no value>
-=> /post/bears/index.gmi Bears! An Incomplete Mini D&D Adventure: <no value>
 ---
 
 => / Back to the Index
