--- a/post/murphy/index.gmi
+++ b/post/murphy/index.gmi
@@ -40,9 +40,9 @@ Obviously, not every situation you find yourself in can be gamed to have a posit
 
 ## Related articles
 
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
 => /post/bears/index.gmi Bears! An Incomplete Mini D&D Adventure: <no value>
-=> /post/equal-rites/index.gmi Review: Equal Rites (Discworld): <no value>
 ---
 
 => / Back to the Index
