--- a/post/saved-posts/index.gmi
+++ b/post/saved-posts/index.gmi
@@ -232,9 +232,9 @@ Dothraki, Michael Scott, Philosophy, Satire, SpongeBob, and all kinds of other s
 
 ## Related articles
 
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
 => /post/murphy/index.gmi Beating Murphy: <no value>
-=> /post/bears/index.gmi Bears! An Incomplete Mini D&D Adventure: <no value>
 ---
 
 => / Back to the Index
