--- a/post/bicycle/index.gmi
+++ b/post/bicycle/index.gmi
@@ -18,9 +18,9 @@ See this video [1] or any really to see how to fit your bike and seat post prope
 
 ## Related articles
 
+=> /post/saved-articles-2/index.gmi My Saved Articles 2: <no value>
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
-=> /post/murphy/index.gmi Beating Murphy: <no value>
 ---
 
 => / Back to the Index
