--- a/post/review-llama-chkn/index.gmi
+++ b/post/review-llama-chkn/index.gmi
@@ -40,9 +40,9 @@ Weirdo.
 
 ## Related articles
 
+=> /post/saved-articles-2/index.gmi My Saved Articles 2: <no value>
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
-=> /post/murphy/index.gmi Beating Murphy: <no value>
 ---
 
 => / Back to the Index
