--- a/post/all-music-sucks/index.gmi
+++ b/post/all-music-sucks/index.gmi
@@ -57,9 +57,9 @@ Pop pretending it's not.
 
 ## Related articles
 
-=> /post/washroom-stalls/index.gmi Washroom Stalls in North America Suck: <no value>
-=> /post/wide-shoes/index.gmi Wide Shoes: <no value>
-=> /post/escalators/index.gmi Escalators: <no value>
+=> /post/washroom-stalls/index.gmi Washroom Stalls in North America Suck
+=> /post/wide-shoes/index.gmi Wide Shoes
+=> /post/escalators/index.gmi Escalators
 ---
 
 => / Back to the Index
