--- a/post/ddg-google/index.gmi
+++ b/post/ddg-google/index.gmi
@@ -28,9 +28,9 @@ Beyond the actual experience of using each search engine, Google is a pretty scu
 
 ## Related articles
 
-=> /post/all-music-sucks/index.gmi All Music Sucks: <no value>
-=> /post/gemini-theme/index.gmi New Theme and Gemini!: <no value>
-=> /post/termux/index.gmi Termux and Android: <no value>
+=> /post/all-music-sucks/index.gmi All Music Sucks
+=> /post/gemini-theme/index.gmi New Theme and Gemini!
+=> /post/termux/index.gmi Termux and Android
 ---
 
 => / Back to the Index
