--- a/post/food-switzerland/index.gmi
+++ b/post/food-switzerland/index.gmi
@@ -18,9 +18,9 @@ It's absolutely bonkers how expensive food here is.
 
 ## Related articles
 
-=> /post/still-alive/index.gmi I'm Still Alive!: <no value>
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports: <no value>
-=> /post/alien/index.gmi I dream of Aliens: <no value>
+=> /post/still-alive/index.gmi I'm Still Alive!
+=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
+=> /post/alien/index.gmi I dream of Aliens
 ---
 
 => / Back to the Index
