--- a/post/link-rot/index.gmi
+++ b/post/link-rot/index.gmi
@@ -59,9 +59,9 @@ I'm not a front end person so I'm sure I messed something up, but it's irritatin
 
 ## Related articles
 
-=> /post/gemini-theme/index.gmi New Theme and Gemini!: <no value>
-=> /post/termux/index.gmi Termux and Android: <no value>
-=> /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene: <no value>
+=> /post/gemini-theme/index.gmi New Theme and Gemini!
+=> /post/termux/index.gmi Termux and Android
+=> /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene
 ---
 
 => / Back to the Index
