--- a/post/mantario/index.gmi
+++ b/post/mantario/index.gmi
@@ -60,9 +60,9 @@ I've forgotten a lot of them already, so I'll update this list as they come back
 
 ## Related articles
 
-=> /post/food-switzerland/index.gmi Food Prices in Switzerland: <no value>
-=> /post/still-alive/index.gmi I'm Still Alive!: <no value>
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports: <no value>
+=> /post/food-switzerland/index.gmi Food Prices in Switzerland
+=> /post/still-alive/index.gmi I'm Still Alive!
+=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
 => / Back to the Index
