--- a/post/prisoner-dilemma/index.gmi
+++ b/post/prisoner-dilemma/index.gmi
@@ -156,9 +156,9 @@ You can email me at: milddermatographia at gmail dot com.
 
 ## Related articles
 
-=> /post/empathy/index.gmi Empathy: <no value>
-=> /post/pet-abuse/index.gmi Don't Abuse your Pets: <no value>
-=> /post/bechdel/index.gmi The Reverse Bechdel Test: <no value>
+=> /post/empathy/index.gmi Empathy
+=> /post/pet-abuse/index.gmi Don't Abuse your Pets
+=> /post/bechdel/index.gmi The Reverse Bechdel Test
 ---
 
 => / Back to the Index
