--- a/post/saved-articles/index.gmi
+++ b/post/saved-articles/index.gmi
@@ -232,9 +232,9 @@ Dothraki, Michael Scott, Philosophy, Satire, SpongeBob, and all kinds of other s
 
 ## Related articles
 
-=> /post/saved-articles-2/index.gmi My Saved Articles 2: <no value>
-=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again: <no value>
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
+=> /post/saved-articles-2/index.gmi My Saved Articles 2
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
+=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
 => / Back to the Index
