--- a/post/termux/index.gmi
+++ b/post/termux/index.gmi
@@ -20,9 +20,9 @@ I don't doubt that Termux might fall short for actual-software-engineering-level
 
 ## Related articles
 
-=> /post/gemini-theme/index.gmi New Theme and Gemini!: <no value>
-=> /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene: <no value>
-=> /post/ddg-google/index.gmi Duck Duck Go > Google: <no value>
+=> /post/gemini-theme/index.gmi New Theme and Gemini!
+=> /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene
+=> /post/ddg-google/index.gmi Duck Duck Go > Google
 ---
 
 => / Back to the Index
