--- a/post/vanessa-hudgens/index.gmi
+++ b/post/vanessa-hudgens/index.gmi
@@ -30,9 +30,9 @@ Rating: Vanessa Hudgens/10
 
 ## Related articles
 
-=> /post/saved-articles-2/index.gmi My Saved Articles 2: <no value>
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day: <no value>
-=> /post/murphy/index.gmi Beating Murphy: <no value>
+=> /post/saved-articles-2/index.gmi My Saved Articles 2
+=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
+=> /post/murphy/index.gmi Beating Murphy
 ---
 
 => / Back to the Index
