--- a/post/video-games/index.gmi
+++ b/post/video-games/index.gmi
@@ -90,9 +90,9 @@ No clue.
 
 ## Related articles
 
-=> /post/food-switzerland/index.gmi Food Prices in Switzerland: <no value>
-=> /post/still-alive/index.gmi I'm Still Alive!: <no value>
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports: <no value>
+=> /post/food-switzerland/index.gmi Food Prices in Switzerland
+=> /post/still-alive/index.gmi I'm Still Alive!
+=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
 => / Back to the Index
