--- a/post/wide-shoes-2/index.gmi
+++ b/post/wide-shoes-2/index.gmi
@@ -22,9 +22,9 @@ Overall, I am a very happy camper right now.
 
 ## Related articles
 
-=> /post/food-switzerland/index.gmi Food Prices in Switzerland: <no value>
-=> /post/still-alive/index.gmi I'm Still Alive!: <no value>
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports: <no value>
+=> /post/food-switzerland/index.gmi Food Prices in Switzerland
+=> /post/still-alive/index.gmi I'm Still Alive!
+=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
 => / Back to the Index
