--- a/post/wide-shoes/index.gmi
+++ b/post/wide-shoes/index.gmi
@@ -48,9 +48,9 @@ I hate wasting so much time waiting for another pair of shoes to come in, only f
 
 ## Related articles
 
-=> /post/all-music-sucks/index.gmi All Music Sucks: <no value>
-=> /post/food-switzerland/index.gmi Food Prices in Switzerland: <no value>
-=> /post/still-alive/index.gmi I'm Still Alive!: <no value>
+=> /post/all-music-sucks/index.gmi All Music Sucks
+=> /post/food-switzerland/index.gmi Food Prices in Switzerland
+=> /post/still-alive/index.gmi I'm Still Alive!
 ---
 
 => / Back to the Index
