--- a/post/bechdel/index.gmi
+++ b/post/bechdel/index.gmi
@@ -140,5 +140,5 @@ If you can think of anything, shoot me an email at `milddermatographia@gmail.com
 => /post/canada-engineering-wasteland/index.gmi The Great Canadian (Mechanical) Engineering Wasteland
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/bechdel/ View this article on the WWW
