--- a/post/bicycle/index.gmi
+++ b/post/bicycle/index.gmi
@@ -23,5 +23,5 @@ See this video [1] or any really to see how to fit your bike and seat post prope
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/bicycle/ View this article on the WWW
