--- a/post/canada-engineering-wasteland/index.gmi
+++ b/post/canada-engineering-wasteland/index.gmi
@@ -185,10 +185,10 @@ Maybe I'll scrape LinkedIn's job postings, then create word clouds to find trend
 
 ## Related articles
 
+=> /post/job-stats/index.gmi My Job Application Statistics
 => /post/all-music-sucks/index.gmi All Music Sucks
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
-=> /post/still-alive/index.gmi I'm Still Alive!
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/canada-engineering-wasteland/ View this article on the WWW
