--- a/post/chicken-pot-pie/index.gmi
+++ b/post/chicken-pot-pie/index.gmi
@@ -130,5 +130,5 @@ He smiled as that violent wall of force and heat rose to meet him.
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/chicken-pot-pie/ View this article on the WWW
