--- a/post/equal-rites/index.gmi
+++ b/post/equal-rites/index.gmi
@@ -70,5 +70,5 @@ I can't recommend this book enough.
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/equal-rites/ View this article on the WWW
