--- a/post/gab/index.gmi
+++ b/post/gab/index.gmi
@@ -245,5 +245,5 @@ Comparing Gab more thoroughly to other social media platforms is a topic for ano
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/gab/ View this article on the WWW
