--- a/post/geas/index.gmi
+++ b/post/geas/index.gmi
@@ -26,5 +26,5 @@ Nearby, there is a Hunter who has broken their contract and is about to be elimi
 => /post/ootoo/index.gmi Prepare and Apply an Ootoo as an Appendage Replacement
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/geas/ View this article on the WWW
