--- a/post/hedonic-treadmill/index.gmi
+++ b/post/hedonic-treadmill/index.gmi
@@ -103,5 +103,5 @@ The **Nihilistic Perfectly-Tuned Mass-Spring-Damper of Happiness** is the observ
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/hedonic-treadmill/ View this article on the WWW
