--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -130,5 +130,5 @@ A welcomed change of pace after being stuck under those same clouds in Zurich fo
 
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/hikes/ View this article on the WWW
