--- a/post/music-listening-to-2/index.gmi
+++ b/post/music-listening-to-2/index.gmi
@@ -64,10 +64,10 @@ I've been revisiting Nero's original album; "Doomsday" and "My Eyes" still slap 
 
 ## Related articles
 
+=> /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
 => /post/still-alive/index.gmi I'm Still Alive!
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/music-listening-to-2/ View this article on the WWW
