--- a/post/prisoner-dilemma/index.gmi
+++ b/post/prisoner-dilemma/index.gmi
@@ -161,5 +161,5 @@ You can email me at: milddermatographia at gmail dot com.
 => /post/bechdel/index.gmi The Reverse Bechdel Test
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/prisoner-dilemma/ View this article on the WWW
