--- a/post/vanessa-hudgens/index.gmi
+++ b/post/vanessa-hudgens/index.gmi
@@ -35,5 +35,5 @@ Rating: Vanessa Hudgens/10
 => /post/murphy/index.gmi Beating Murphy
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/vanessa-hudgens/ View this article on the WWW
