--- a/post/wide-shoes-2/index.gmi
+++ b/post/wide-shoes-2/index.gmi
@@ -22,10 +22,10 @@ Overall, I am a very happy camper right now.
 
 ## Related articles
 
+=> /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
 => /post/still-alive/index.gmi I'm Still Alive!
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/wide-shoes-2/ View this article on the WWW
