--- a/post/arch-linux/index.gmi
+++ b/post/arch-linux/index.gmi
@@ -24,5 +24,5 @@ I'm feeling less bad about going back to Ubuntu (again) now.
 => /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/arch-linux/ View this article on the WWW
