--- a/post/checkout-lane/index.gmi
+++ b/post/checkout-lane/index.gmi
@@ -59,5 +59,5 @@ Either way, I'm excited to be back in a country that does grocery shopping prope
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/checkout-lane/ View this article on the WWW
