--- a/post/mantario/index.gmi
+++ b/post/mantario/index.gmi
@@ -60,10 +60,10 @@ I've forgotten a lot of them already, so I'll update this list as they come back
 
 ## Related articles
 
+=> /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
 => /post/still-alive/index.gmi I'm Still Alive!
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/mantario/ View this article on the WWW
