--- a/post/military-kid/index.gmi
+++ b/post/military-kid/index.gmi
@@ -137,10 +137,10 @@ Sorry dad.
 
 ## Related articles
 
+=> /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
 => /post/still-alive/index.gmi I'm Still Alive!
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/military-kid/ View this article on the WWW
