--- a/post/video-games/index.gmi
+++ b/post/video-games/index.gmi
@@ -90,10 +90,10 @@ No clue.
 
 ## Related articles
 
+=> /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
 => /post/still-alive/index.gmi I'm Still Alive!
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
-=> / Back to the Index
+=> / Back to site home
 => https://milddermatographia.com/post/video-games/ View this article on the WWW
