--- a/post/port-blocking/index.gmi
+++ b/post/port-blocking/index.gmi
@@ -19,9 +19,9 @@ I guess I'm just keeping my VPN subscription until the end of my degree.
 
 ## Related articles
 
+=> /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
 => /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
-=> /post/still-alive/index.gmi I'm Still Alive!
 ---
 
 => / Back to site home
