--- a/post/still-alive/index.gmi
+++ b/post/still-alive/index.gmi
@@ -26,9 +26,9 @@ I'm excited to work on this again.
 
 ## Related articles
 
+=> /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
 => /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
-=> /post/port-blocking/index.gmi My Student Housing is Blocking Ports
 ---
 
 => / Back to site home
