--- a/post/tfa-2/index.gmi
+++ b/post/tfa-2/index.gmi
@@ -66,9 +66,9 @@ That said, I need to take the time to weigh their strengths and weaknesses prope
 
 ## Related articles
 
+=> /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
 => /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
-=> /post/gemini-theme/index.gmi New Theme and Gemini!
 ---
 
 => / Back to site home
