--- a/post/wide-shoes-2/index.gmi
+++ b/post/wide-shoes-2/index.gmi
@@ -22,9 +22,9 @@ Overall, I am a very happy camper right now.
 
 ## Related articles
 
+=> /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
 => /post/job-stats/index.gmi My Job Application Statistics
 => /post/food-switzerland/index.gmi Food Prices in Switzerland
-=> /post/still-alive/index.gmi I'm Still Alive!
 ---
 
 => / Back to site home
