--- a/post/wide-shoes/index.gmi
+++ b/post/wide-shoes/index.gmi
@@ -48,9 +48,9 @@ I hate wasting so much time waiting for another pair of shoes to come in, only f
 
 ## Related articles
 
+=> /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
 => /post/job-stats/index.gmi My Job Application Statistics
 => /post/all-music-sucks/index.gmi All Music Sucks
-=> /post/food-switzerland/index.gmi Food Prices in Switzerland
 ---
 
 => / Back to site home
