--- a/post/ddg-google/index.gmi
+++ b/post/ddg-google/index.gmi
@@ -28,9 +28,9 @@ Beyond the actual experience of using each search engine, Google is a pretty scu
 
 ## Related articles
 
+=> /post/all-music-sucks-2/index.gmi Update: All Music Sucks
 => /post/all-music-sucks/index.gmi All Music Sucks
 => /post/gemini-theme/index.gmi New Theme and Gemini!
-=> /post/termux/index.gmi Termux and Android
 ---
 
 => / Back to site home
