--- a/post/escalators/index.gmi
+++ b/post/escalators/index.gmi
@@ -55,9 +55,9 @@ Please, Walk Down the Escalator [3]
 
 ## Related articles
 
+=> /post/all-music-sucks-2/index.gmi Update: All Music Sucks
 => /post/all-music-sucks/index.gmi All Music Sucks
 => /post/washroom-stalls/index.gmi Washroom Stalls in North America Suck
-=> /post/wide-shoes/index.gmi Wide Shoes
 ---
 
 => / Back to site home
