--- a/post/scholarships/index.gmi
+++ b/post/scholarships/index.gmi
@@ -37,9 +37,9 @@ Oh, and they're not just for first year of the degree, but for each year.
 
 ## Related articles
 
+=> /post/all-music-sucks-2/index.gmi Update: All Music Sucks
 => /post/all-music-sucks/index.gmi All Music Sucks
 => /post/washroom-stalls/index.gmi Washroom Stalls in North America Suck
-=> /post/wide-shoes/index.gmi Wide Shoes
 ---
 
 => / Back to site home
