--- a/post/two-factor-authentication/index.gmi
+++ b/post/two-factor-authentication/index.gmi
@@ -47,9 +47,9 @@ I feel vindicated for calling it a first world problem, because it's so much mor
 
 ## Related articles
 
+=> /post/all-music-sucks-2/index.gmi Update: All Music Sucks
 => /post/all-music-sucks/index.gmi All Music Sucks
 => /post/washroom-stalls/index.gmi Washroom Stalls in North America Suck
-=> /post/wide-shoes/index.gmi Wide Shoes
 ---
 
 => / Back to site home
