--- a/post/washroom-stalls/index.gmi
+++ b/post/washroom-stalls/index.gmi
@@ -24,9 +24,9 @@ It's a wonderful experience, doing what you are there to do without constantly w
 
 ## Related articles
 
+=> /post/all-music-sucks-2/index.gmi Update: All Music Sucks
 => /post/all-music-sucks/index.gmi All Music Sucks
 => /post/wide-shoes/index.gmi Wide Shoes
-=> /post/escalators/index.gmi Escalators
 ---
 
 => / Back to site home
