--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -16,6 +16,8 @@ I visited Switzerland for a week in April while working in Germany.
 **Shilthorn and Lauterbrunnen** - Being a tourist, I had no choice but to visit the Interlaken area.
 Gorgeous valley, great views while hiking along the cliffs on the Shilthorn side, and the falls were pretty magnificent as well.
 
+---
+
 ## 2019
 
 ### Hawaii
@@ -118,9 +120,16 @@ It was cool getting to see mountains I've previously hiked in the distance, like
 The clouds were incredibly low and covered everything which wasn't a mountain; it felt like we were above a massive white lake.
 A welcomed change of pace after being stuck under those same clouds in Zurich for the last few weeks.
 
+---
+
+## 2022
+
+**Uetliber** - And back up we go! The walk up isn't as pretty in the winter, but the view from the top is still absolutely gorgeous.
+I've also heard that the mountains are more visible in colder months, which I certainly won't complain about as a trade-off.
+
 
 ---
-21 November 2021.
+20 January 2022.
 
 ## References
  
