Publish things i want to do

--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -2,8 +2,7 @@
 
 
 
-This is the first "living" document I'll be creating on this blog, which I'll update as I have new content to add to it; the publication date will always be that of the latest hike, so it doesn't get lost down in the blog list.
-It's a big 'ol list of the hikes I've done, with a quick description/review for each.
+A big 'ol list of the hikes I've done, with a quick description/review for each, updated as I do more hikes.
 
 ---
 
