--- a/post/food-switzerland/index.gmi
+++ b/post/food-switzerland/index.gmi
@@ -18,9 +18,9 @@ It's absolutely bonkers how expensive food here is.
 
 ## Related articles
 
+=> /post/things-i-want-to-do/index.gmi Things I Want to Do
 => /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
 => /post/job-stats/index.gmi My Job Application Statistics
-=> /post/still-alive/index.gmi I'm Still Alive!
 ---
 
 => / Back to site home
