--- a/post/still-alive/index.gmi
+++ b/post/still-alive/index.gmi
@@ -26,9 +26,9 @@ I'm excited to work on this again.
 
 ## Related articles
 
+=> /post/things-i-want-to-do/index.gmi Things I Want to Do
 => /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
 => /post/job-stats/index.gmi My Job Application Statistics
-=> /post/food-switzerland/index.gmi Food Prices in Switzerland
 ---
 
 => / Back to site home
